# working

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README-docker.md  README.md  Untitled.ipynb  Untitled1.ipynb  agent.ipynb  app.py  article.md  articles.json  builder.ipynb  cloudbuild.yaml  daily.py  data.ipynb  docker-compose.infra.yml  docker-compose.services.yml  docker-compose.yaml  docker-compose.yml  justfile  langgraph.json  latest.json  main.py  makefile  next.config.ts  package-lock.json  package.json  process.py  pyproject.toml  remote.ipynb  server.py  settings.json  style.ipynb  style.md  test.py  tools.json  tools.py
.clinerules/: AGENTS.md  interactions_structure.md  project_structure.md
agents/: agent.py  tools.py
app/: layout.tsx
article/: sources.py  test_utils.py  utils.py
data/: godady.md  musing.md  oreilly1.md  oreilly2.md  oreilly3.md
data/2025-10-18/: SpaceX_President_Declared_Starship_Refilling_System_to_the_Moon_Next_Year_after….md  SpaceX_Starship_Flight_11_Booster_Breakthrough_Achieved!_Ready_to_Become_New_Space_Station.md  String_Theory_is_“Fashion,”_Penrose_Said._We_Finally_Have_a_Response.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
product/: PRD.md  architecture.md  personas.md  roadmap.md
product/components/: user_service_interface.md
product/interactions/: mobile_app_flow.md  primary_user_journey.md  web_signup_journey.md
search/: database.py  search.py
services/content-service/: alembic.ini  config.py  database.py  main.py  requirements.txt  test_service.py
services/frontend/: README.md  next.config.js  package.json  tsconfig.json  (+1 more)
updater/: collect.py
(+31 files in other folders)
