[tool.poetry]
name = "working"
version = "0.1.0"
description = ""
authors = ["Boris Tvaroska <boris@tvaroska.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.25.2"
feedparser = "^6.0.11"
tqdm = "^4.67.1"
tenacity = "^9.0.0"
google-genai = "^0.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
