[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "working"
version = "0.1.0"
description = ""
authors = [{ name = "Boris Tvaroska", email = "boris@tvaroska.sk" }]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "flet>=0.25.2,<0.26",
    "flet-web>=0.25.2,<0.26",
    "feedparser>=6.0.11,<7",
    "tqdm>=4.67.1,<5",
    "tenacity>=9.0.0,<10",
    "google-genai>=0.3.0",
    "structlog>=25.1.0",
    "jupyterlab>=4.4.7",
]

[dependency-groups]
dev = [
    "black>=24.10.0,<25",
    "isort>=5.13.2,<6",
]
